docs: add comments to variables

--- a/scss/themes/dark/variables/components/_dropdowns.scss
+++ b/scss/themes/dark/variables/components/_dropdowns.scss
@@ -4,6 +4,7 @@
 // Dropdown menu container and contents.
 
 // Dark theme
+// scss-docs-start dropdowns-dark-theme
 $dropdown-color__dt:                $body-color__dt !default;
 $dropdown-bg__dt:                   $gray-200__dt !default;
 $dropdown-border-color__dt:         $border-color__dt !default;
@@ -15,6 +16,7 @@ $dropdown-link-active-color__dt:    $component-active-color__dt !default;
 $dropdown-link-active-bg__dt:       $component-active-bg__dt !default;
 $dropdown-link-disabled-color__dt:  rgba($body-color__dt, .6) !default;
 $dropdown-header-color__dt:         $body-color__dt !default;
+// scss-docs-end dropdowns-dark-theme
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $dropdown-theme-map: map-merge(
