--- a/scss/themes/dark/variables/components/_progress-bars.scss
+++ b/scss/themes/dark/variables/components/_progress-bars.scss
@@ -1,9 +1,11 @@
 // Progress bars
 
 // Dark theme
+// scss-docs-start progress-bar-dark-theme
 $progress-bg__dt:         rgba($white, .2) !default;
 $progress-bar-color__dt:  $white !default;
 $progress-bar-bg__dt:     $primary__dt !default;
+// scss-docs-end progress-bar-dark-theme
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $progress-theme-map: map-merge(
