--- a/scss/themes/legacy/variables/components/_toasts.scss
+++ b/scss/themes/legacy/variables/components/_toasts.scss
@@ -1,5 +1,5 @@
 // Legacy theme
-
+// scss-docs-start toast-legacy-theme
 $toast-background-color__lt:  rgba($white, .85) !default;
 $toast-color__lt:             null !default;
 $toast-border-color__lt:      rgba($black__lt, .1) !default;
@@ -7,6 +7,7 @@ $toast-border-color__lt:      rgba($black__lt, .1) !default;
 $toast-header-color__lt:             $gray-600__lt !default;
 $toast-header-background-color__lt:  rgba($white, .85) !default;
 $toast-header-border-color__lt:      rgba($black__lt, .05) !default;
+// scss-docs-end toast-legacy-theme
 
 $toast-theme-map: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
