--- a/scss/variables/components/_avatars.scss
+++ b/scss/variables/components/_avatars.scss
@@ -1,5 +1,5 @@
 // Avatars
-
+// scss-docs-start avatars
 $avatar-sm-width:         24px !default;
 $avatar-sm-status-width:  8px !default;
 
@@ -11,3 +11,4 @@ $avatar-lg-status-width:  12px !default;
 
 $avatar-xl-width:         64px !default;
 $avatar-xl-status-width:  14px !default;
+// scss-docs-end avatars
