--- a/scss/variables/components/_badges.scss
+++ b/scss/variables/components/_badges.scss
@@ -1,6 +1,7 @@
 
 // Badges
 
+// scss-docs-start badges
 $badge-font-size:      75% !default;
 $badge-font-weight:    $font-weight-bold !default;
 $badge-padding-y:      .25em !default;
@@ -14,4 +15,5 @@ $badge-pill-padding-x:  .6em !default;
 // Use a higher than normal value to ensure completely rounded edges when
 // customizing padding or font-size on labels.
 $badge-pill-border-radius:  10rem !default;
+// scss-docs-end badges
 
