--- a/scss/variables/components/_switches.scss
+++ b/scss/variables/components/_switches.scss
@@ -1,5 +1,5 @@
 // Switches
-
+// scss-docs-start switch
 $switch-width:      40px !default;
 $switch-height:     26px !default;
 $switch-font-size:  10px !default;
@@ -17,3 +17,4 @@ $switch-label-lg-width:  56px !default;
 $switch-label-sm-width:  40px !default;
 
 $switch-handle-margin:  2px !default;
+// scss-docs-end switch
