--- a/scss/themes/dark/variables/components/_footer.scss
+++ b/scss/themes/dark/variables/components/_footer.scss
@@ -1,9 +1,11 @@
 // Footer
 
 // Dark Theme
+// scss-docs-start footer-dark-theme
 $footer-dark-bg__dt:       $gray-800__dt !default;
 $footer-dark-color__dt:    $body-color__dt !default;
 $footer-dark-borders__dt:  ( top: 1px solid $gray-900__dt ) !default;
+// scss-docs-end footer-dark-theme
 
 $footer-variants-map__dt: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
