--- a/scss/themes/dark/variables/components/_jumbotron.scss
+++ b/scss/themes/dark/variables/components/_jumbotron.scss
@@ -2,8 +2,10 @@
 // Jumbotron
 
 // Dark theme
+// scss-docs-start jumbotron-dark-theme
 $jumbotron-color__dt:  null !default;
 $jumbotron-bg__dt:     rgba($white, .1) !default;
+// scss-docs-end jumbotron-dark-theme
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $jumbotron-theme-map: map-merge(
