--- a/scss/themes/legacy/variables/components/_sidebar.scss
+++ b/scss/themes/legacy/variables/components/_sidebar.scss
@@ -1,5 +1,5 @@
 // Legacy Theme
-
+// scss-docs-start sidebar-legacy-theme
 $sidebar-backdrop-bg__lt:       $black__lt !default;
 
 $sidebar-dark-color__lt:    $white !default;
@@ -144,6 +144,7 @@ $sidebar-light-minimizer-indicator__lt:              str-replace(url("data:image
 $sidebar-light-minimizer-hover-bg__lt:               rgba(0, 0, 0, .1) !default;
 $sidebar-light-minimizer-hover-indicator-color__lt:  $gray-700__lt !default;
 $sidebar-light-minimizer-hover-indicator__lt:        str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3Cpath fill='#{$sidebar-light-minimizer-hover-indicator-color__lt}' d='M9.148 2.352l-4.148 4.148 4.148 4.148q0.148 0.148 0.148 0.352t-0.148 0.352l-1.297 1.297q-0.148 0.148-0.352 0.148t-0.352-0.148l-5.797-5.797q-0.148-0.148-0.148-0.352t0.148-0.352l5.797-5.797q0.148-0.148 0.352-0.148t0.352 0.148l1.297 1.297q0.148 0.148 0.148 0.352t-0.148 0.352z'/%3E%3C/svg%3E"), "#", "%23") !default;
+// scss-docs-end sidebar-legacy-theme
 
 $sidebar-variants-map__lt: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
