--- a/scss/variables/components/_buttons-forms.scss
+++ b/scss/variables/components/_buttons-forms.scss
@@ -1,5 +1,6 @@
 // Buttons + Forms
 //
+// scss-docs-start buttons-forms
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
 $input-btn-padding-y:    .375rem !default;
@@ -23,10 +24,12 @@ $input-btn-font-size-lg:    $font-size-lg !default;
 $input-btn-line-height-lg:  $line-height-lg !default;
 
 $input-btn-border-width:  $border-width !default;
+// scss-docs-end buttons-forms
 
 
 // Buttons
 //
+// scss-docs-start buttons
 // For each of Bootstrap's buttons, define text, background, and border color.
 
 $btn-padding-y:    $input-btn-padding-y !default;
@@ -65,10 +68,11 @@ $btn-border-radius-lg:  $border-radius-lg !default;
 $btn-border-radius-sm:  $border-radius-sm !default;
 
 $btn-transition:  color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
-
+// scss-docs-end buttons
 
 // Forms
 
+// scss-docs-start forms
 $label-margin-bottom:  .5rem !default;
 
 $input-padding-y:    $input-btn-padding-y !default;
@@ -136,6 +140,7 @@ $form-group-margin-bottom:  1rem !default;
 $input-group-addon-color:         $input-color !default;
 $input-group-addon-bg:            $gray-100 !default;
 $input-group-addon-border-color:  $input-border-color !default;
+// scss-docs-end forms
 
 $form-theme-map: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
