--- a/scss/variables/components/_navs.scss
+++ b/scss/variables/components/_navs.scss
@@ -1,5 +1,6 @@
 // Navs
 
+// scss-docs-start nav
 $nav-link-padding-y:  .5rem !default;
 $nav-link-padding-x:  1rem !default;
 
@@ -13,8 +14,10 @@ $nav-tabs-boxed-content-border-width:  $border-width !default;
 $nav-pills-border-radius:  $border-radius !default;
 
 $nav-divider-margin-y:  $spacer / 2 !default;
+// scss-docs-end nav
 
 // Light Theme
+// scss-docs-start nav-default-theme
 $nav-link-disabled-color:            $gray-600 !default;
 $nav-tabs-border-color:              $gray-300 !default;
 $nav-tabs-link-hover-border-color:   $gray-200 $gray-200 $nav-tabs-border-color !default;
@@ -33,6 +36,7 @@ $nav-tabs-boxed-right-active-border-color:  $border-color $border-color $border-
 $nav-pills-link-active-color:  $component-active-color !default;
 $nav-pills-link-active-bg:     $component-active-bg !default;
 $nav-divider-color:            $gray-200 !default;
+// scss-docs-end nav-default-theme
 
 $nav-theme-map: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
