--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -389,3 +389,16 @@ textarea.form-control {
     }
   }
 }
+
+.form-control-color {
+  max-width: 3rem;
+  padding: $input-padding-y;
+}
+
+.form-control-color::-moz-color-swatch {
+  @include border-radius($input-border-radius);
+}
+
+.form-control-color::-webkit-color-swatch {
+  @include border-radius($input-border-radius);
+}
